# opengl_fun

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Rakefile
src/: cube.cpp  cube.hpp  game.cpp  game.hpp  main.cpp
